--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+*.gem
+.bundle
+.jekyll-cache
+.sass-cache
+_site
+Gemfile.lock
+
 _site
 .sass-cache
 .jekyll-cache
 .jekyll-metadata
 vendor
-
-.vscode
