--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'End Portal'
-description: 'GitHub Actions workflow to automate build and deployment'
+description: 'GitHub Actions workflow to automate build'
 author: 'TaciturnCoder'
 
 jobs:
@@ -16,21 +16,10 @@ jobs:
         with:
           source: ./
           destination: ./_site
-      - name: Run build scripts
+      - name: Run post-build scripts
         run: |
+          # currently none
           echo "Printing structure of ./_site"
           ls -lar "./_site"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
-
-  # GitHub Actions workflow to automate deployment
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
